--- a/src/public/sass/modules/_forms.scss
+++ b/src/public/sass/modules/_forms.scss
@@ -38,7 +38,7 @@
         }
 
         p {
-            padding: .75em .5em;
+            padding: .75em;
         }
     }
     .selectric .label {
