corrected all heading tags up 1 degree (h2 > h1, etc); added form validations styles; adjusted footer and footer spacing; removed borders in mobile nav; adjusted homepage headline spacing on mobile; removed link form velux header logo; made phone visible while mobile nav open; updated active styling for nav minor; updated brochures layout for variable numbers of brochures; added pointer to nav open icon hover

--- a/src/public/sass/helpers/_utilities.scss
+++ b/src/public/sass/helpers/_utilities.scss
@@ -1,4 +1,16 @@
 /*-----------------------
+  @HEADINGS
+------------------------*/
+%mega-heading {
+    font-size: 3em; /* 48 / 16 */
+    line-height: 1em; /* (24 * 2) / 48  (double) */
+    margin-bottom: .5em; /* 24 / 48 */
+}
+.mega-heading {
+    @extend %mega-heading;
+}
+
+/*-----------------------
   @TYPE
 
   trying to conflict
@@ -211,6 +223,20 @@
 }
 .snug-bottom {
     @extend %snug-bottom;
+}
+
+%snug-left {
+    padding-left: 0 !important;
+}
+.snug-left {
+    @extend %snug-left;
+}
+
+%snug-right {
+    padding-right: 0 !important;
+}
+.snug-right {
+    @extend %snug-right;
 }
 
 /*-----------------------
