--- a/src/public/sass/styles.scss
+++ b/src/public/sass/styles.scss
@@ -46,5 +46,6 @@
 @import "pages/homepage";
 @import "pages/installing";
 @import "pages/products";
+@import "pages/promotions";
 @import "pages/why-skylights";
 @import "pages/styleguide";
