--- a/src/public/sass/base/_elements.scss
+++ b/src/public/sass/base/_elements.scss
@@ -51,54 +51,54 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 %h1 {
-    font-size: 3em; /* 48 / 16 */
-    line-height: 1em; /* (24 * 2) / 48  (double) */
-    margin-bottom: .5em; /* 24 / 48 */
+    font-size: 2em; /* 32 / 16 */
+    line-height: 1.333333333333333em; /* (24 * 2) / 36 (double) */
+    margin-bottom: .6666666666666667em; /* 24 / 36 */
 }
 h1 {
     @extend %h1;
 }
 
 %h2 {
-    font-size: 2em; /* 32 / 16 */
-    line-height: 1.333333333333333em; /* (24 * 2) / 36 (double) */
-    margin-bottom: .6666666666666667em; /* 24 / 36 */
+    font-size: 1.5em; /* 24 / 16 */
+    line-height: 1.5em; /* 24 / 24 */
+    margin-bottom: 1em; /* 24 / 24 */
 }
 h2 {
     @extend %h2;
 }
 
 %h3 {
-    font-size: 1.5em; /* 24 / 16 */
-    line-height: 1.5em; /* 24 / 24 */
-    margin-bottom: 1em; /* 24 / 24 */
+    font-size: 1.3125em; /* 21 / 16 */
+    line-height: 1.142857142857143em; /* 24 / 21 */
+    margin-bottom: 1.142857142857143em; /* 24 / 21 */
 }
 h3 {
     @extend %h3;
 }
 
 %h4 {
-    font-size: 1.3125em; /* 21 / 16 */
-    line-height: 1.142857142857143em; /* 24 / 21 */
-    margin-bottom: 1.142857142857143em; /* 24 / 21 */
+    font-size: 1.125em; /* 18 / 16 */
+    line-height: 1.333333333333333em; /* 24 / 18 */
+    margin-bottom: 1.333333333333333em; /* 24 / 18 */
 }
 h4 {
     @extend %h4;
 }
 
 %h5 {
-    font-size: 1.125em; /* 18 / 16 */
-    line-height: 1.333333333333333em; /* 24 / 18 */
-    margin-bottom: 1.333333333333333em; /* 24 / 18 */
+    font-size: 1em; /* 16 / 16 */
+    line-height: 1.5em; /* 24 / 16 */
+    margin-bottom: 1.5em; /* 24 / 16 */
 }
 h5 {
     @extend %h5;
 }
 
 %h6 {
-    font-size: 1em; /* 16 / 16 */
-    line-height: 1.5em; /* 24 / 16 */
-    margin-bottom: 1.5em; /* 24 / 16 */
+    font-size: .875em; /* 14 / 16 */
+    line-height: 1.25em; /* 20 / 16 */
+    margin-bottom: 1.25em; /* 20 / 16 */
 }
 h6 {
     @extend %h6;
