--- a/src/public/sass/layout/_page.scss
+++ b/src/public/sass/layout/_page.scss
@@ -19,6 +19,7 @@
         right: auto;
     }
     max-width: $page-max-width;
+    min-height: 100%;
 }
 
 %page-row {
@@ -42,33 +43,33 @@
 }
 .page-row--snug {
     padding: {
-        left: 5% !important;
-        right: 5% !important;
+        left: 5%;
+        right: 5%;
     }
 }
 .page-row--squeezed {
     padding: {
-        left: 20% !important;
-        right: 20% !important;
+        left: 20%;
+        right: 20%;
     }
 
     @include bp($foundation-small, $mobile-landscape) {
         padding: {
-            left: 10% !important;
-            right: 10% !important;
+            left: 10%;
+            right: 10%;
         }
     }
 }
 .page-row--short {
     padding: {
-        bottom: 3% !important;
-        top: 3% !important;
+        bottom: 3%;
+        top: 3%;
     }
 }
 .page-row--tall {
     padding: {
-        bottom: 15% !important;
-        top: 15% !important;
+        bottom: 15%;
+        top: 15%;
     }
 
     @include bp($mobile-landscape) {
@@ -80,14 +81,7 @@
 }
 .page-row--extra-tall {
     padding: {
-        bottom: 15% !important;
-        top: 15% !important;
+        bottom: 15%;
+        top: 15%;
     }
-}
-
-%snug-bottom {
-    padding-bottom: 0;
-}
-.snug-bottom {
-    @extend %snug-bottom;
 }
