added why-skylights--reasons images to site and to page; updated footer spacing; fixed vertical centering of velux logo in header; adjusted welcome hero area on homepage after button was removed; created paid-search header and did majority of styling

--- a/src/public/sass/helpers/_variables.scss
+++ b/src/public/sass/helpers/_variables.scss
@@ -2,6 +2,8 @@
 
 // dimensions
 $page-max-width: 1800px;
+$ps-masthead-height: 125px;
+$ps-masthead-mobile: 80px;
 $masthead-height: 78px;
 $masthead-border: 1px;
 $masthead-mobile: 70px;
