--- a/src/public/sass/layout/_footer.scss
+++ b/src/public/sass/layout/_footer.scss
@@ -94,6 +94,7 @@
         position: static;
 
         img {
+            margin-bottom: 5px;
             max-height: 30%;
             max-width: 40%;
         }
@@ -102,7 +103,7 @@
         color: $color-grey;
         font-size: 0.857em;
         margin: 8px auto;
-        max-width: 60%;
+        max-width: 50%;
 
         @include bp($foundation-small, $foundation-med) {
             bottom: 26px;
