--- a/src/public/sass/styles.scss
+++ b/src/public/sass/styles.scss
@@ -17,6 +17,7 @@
 @import "layout/nav-header";
 @import "layout/nav-secondary";
 @import "layout/page";
+@import "layout/paid-search-header";
 
 @import "modules/accessories";
 @import "modules/arrows";
@@ -45,6 +46,8 @@
 @import "pages/contact";
 @import "pages/homepage";
 @import "pages/installing";
+@import "pages/paid-search";
+@import "pages/product-detail";
 @import "pages/products";
 @import "pages/promotions";
 @import "pages/why-skylights";
