--- a/src/public/sass/layout/_header.scss
+++ b/src/public/sass/layout/_header.scss
@@ -19,10 +19,6 @@
                 max-width: 200px;
             }
         }
-        div {
-            display: inline-block;
-            vertical-align: middle;
-        }
     }
 
     @include bp($tablet) {
@@ -59,57 +55,152 @@
         top: 0;
     }
 
+    .masthead__section {
+
+        &--large {
+            padding: {
+                left: 2.5%;
+            }
+            position: static;
+        }
+        &--small {
+            float: right;
+            width: 130px;
+
+            @include bp($mobile-landscape) {
+                width: 140px;
+            }
+
+            @include bp($switch-nav-large) {
+                max-width: 180px;
+                width: 11%;
+            }
+        }
+        &--phone {
+            border: {
+                left: 1px solid $color-secondary;
+                right: 1px solid $color-secondary;
+            }
+            position: absolute;
+            right: 80px;
+            top: 0;
+
+            @include bp($foundation-small, $tablet) {
+                border-right:0;
+                left: 0;
+            }
+            @include bp($foundation-large) {
+                position: relative;
+                right: 0;
+            }
+
+        }
+        &--velux {
+            display: none;
+
+            @include bp($foundation-large) {
+                display: block;
+                line-height: 0;
+                max-width: 160px;
+            }
+        }
+    }
+    .nav-header-trigger {
+        @extend %centered;
+        background: transparent !important;
+        color: $color-primary;
+        display: block;
+        height: $masthead-mobile;
+        padding: 0;
+        position: absolute;
+        right: 0;
+        top: 0;
+        width: 80px;
+
+        .navbar-icon-open {
+            .nav-header--is-open & {
+                display: none;
+            }
+        }
+        .navbar-icon-close {
+            display: none;
+
+            .nav-header--is-open & {
+                display: inline-block;
+                position: relative;
+            }
+        }
+
+        @include bp($foundation-med) {
+            height: $masthead-height;
+        }
+        @include bp($foundation-large) {
+            float: right;
+            margin-right: 10px;
+            position: relative;
+            width: 60px;
+        }
+        @include bp($switch-nav-large) {
+            display: none !important;
+        }
+    }
+    .nav-header__link {
+        color: $color-grey-dark;
+        display: inline-block;
+        line-height: $masthead-mobile;
+
+        &:hover {
+            text-decoration: none;
+        }
+        &.first {
+            padding-left: 0;
+        }
+        &.last {
+            padding-right: 0;
+        }
+
+        @include bp($foundation-small, $tablet) {
+            margin: {
+                left: auto;
+                right: auto;
+            }
+            max-width: 220px;
+        }
+        @include bp($foundation-med) {
+            line-height: $masthead-height;
+        }
+    }
+
     @include bp($foundation-med) {
         height: $masthead-height + $masthead-border;
     }
-}
+    .phone {
+        display: inline-block;
+        margin: 0 auto;
+        width: 100%;
 
-.masthead__section {
-
-    &--large {
-        padding: {
-            left: 2.5%;
-        }
-        position: static;
-    }
-    &--small {
-        float: right;
-        width: 130px;
-
-        @include bp($mobile-landscape) {
-            width: 140px;
-        }
-
-        @include bp($switch-nav-large) {
-            max-width: 180px;
-            width: 11%;
+        .phone-number {
+            font-size: .875em;
+            width: 100%;
         }
     }
-    &--phone {
-        border: {
-            left: 1px solid $color-secondary;
-            right: 1px solid $color-secondary;
-        }
-        position: absolute;
-        right: 80px;
-        top: 0;
+    .velux-logo {
+        display: inline-block;
+        height: $masthead-height;
+        line-height: $masthead-height;
+        width: 100%;
 
-        @include bp($foundation-small, $tablet) {
-            border-right:0;
-            left: 0;
-        }
-        @include bp($foundation-large) {
-            position: relative;
-            right: 0;
-        }
-
-    }
-    &--velux {
-        display: none;
-
-        @include bp($foundation-large) {
+        img {
+            @extend %vc;
             display: block;
-            max-width: 160px;
+            margin: 0 auto;
+            position: relative;
+            /*top: 10%;*/
+            width: 70%;
+
+            @include bp($switch-nav-large) {
+                width: 60%;
+            }
         }
     }
 }
@@ -117,100 +208,4 @@
 .masthead-wrapper {
     width: 100%;
     z-index: 100;
-}
-
-.nav-header-trigger {
-    @extend %centered;
-    background: transparent !important;
-    color: $color-primary;
-    display: block;
-    height: $masthead-mobile;
-    padding: 0;
-    position: absolute;
-    right: 0;
-    top: 0;
-    width: 80px;
-
-    .navbar-icon-open {
-        .nav-header--is-open & {
-            display: none;
-        }
-    }
-    .navbar-icon-close {
-        display: none;
-
-        .nav-header--is-open & {
-            display: inline-block;
-            position: relative;
-        }
-    }
-
-    @include bp($foundation-med) {
-        height: $masthead-height;
-    }
-    @include bp($foundation-large) {
-        float: right;
-        margin-right: 10px;
-        position: relative;
-        width: 60px;
-    }
-    @include bp($switch-nav-large) {
-        display: none !important;
-    }
-}
-
-.nav-header__link {
-    color: $color-grey-dark;
-    display: inline-block;
-    line-height: $masthead-mobile;
-
-    &:hover {
-        text-decoration: none;
-    }
-    &.first {
-        padding-left: 0;
-    }
-    &.last {
-        padding-right: 0;
-    }
-
-    @include bp($foundation-small, $tablet) {
-        margin: {
-            left: auto;
-            right: auto;
-        }
-        max-width: 220px;
-    }
-    @include bp($foundation-med) {
-        line-height: $masthead-height;
-    }
-}
-
-.phone {
-    display: inline-block;
-    margin: 0 auto;
-    width: 100%;
-
-    .phone-number {
-        font-size: .875em;
-        width: 100%;
-    }
-}
-
-.velux-logo {
-    display: inline-block;
-    height: $masthead-height;
-    line-height: $masthead-height;
-    width: 100%;
-
-    img {
-        margin: 0 auto;
-        position: relative;
-        top: 10%;
-        width: 70%;
-
-        @include bp($switch-nav-large) {
-            width: 60%;
-        }
-    }
 }
