--- a/src/public/sass/helpers/_variables.scss
+++ b/src/public/sass/helpers/_variables.scss
@@ -42,6 +42,7 @@ $color-grey-border: #dfdfdf;
 $color-grey-dark-border: #4a4f50;
 $color-reverse-heading: #fff;
 $color-reverse: #dfdfdf;
+$color-social-icons: #5f6c71;
 $color-text-light: #f0f0f0;
 $overlay: $color-footer-bg;
 
