--- a/src/public/sass/layout/_header.scss
+++ b/src/public/sass/layout/_header.scss
@@ -65,10 +65,10 @@
         }
         &--small {
             float: right;
-            width: 130px;
+            width: 140px;
 
             @include bp($mobile-landscape) {
-                width: 140px;
+                width: 150px;
             }
 
             @include bp($switch-nav-large) {
@@ -179,6 +179,19 @@
         margin: 0 auto;
         width: 100%;
 
+        .icon-phone {
+            margin-right: 5px;
+
+            @include bp($foundation-small, $mobile-landscape) {
+                height: 16px;
+                width: 16px;
+            }
+            @include bp($my-very-large) {
+                height: 20px;
+                width: 20px;
+            }
+        }
+
         .phone-number {
             font-size: .875em;
             width: 100%;
@@ -195,7 +208,6 @@
             display: block;
             margin: 0 auto;
             position: relative;
-            /*top: 10%;*/
             width: 70%;
 
             @include bp($switch-nav-large) {
