--- a/src/public/sass/modules/_slick.scss
+++ b/src/public/sass/modules/_slick.scss
@@ -22,3 +22,36 @@
 .slick-slider {
     margin-bottom: 0;
 }
+
+.slick-dots {
+    $d-dots: 17px;
+    @extend %centered;
+    bottom: 0;
+
+    li {
+        margin: 0;
+        width: $d-dots;
+
+        button {
+            width: $d-dots;
+        }
+        button:before {
+            color: $color-grey-light;
+            font-family: sans-serif;
+            font-size: 40px;
+            opacity: 1;
+            width: $d-dots;
+
+            .reversed & {
+                color: $color-reverse-heading;
+            }
+        }
+        &.slick-active button:before {
+            color: $color-primary;
+        }
+    }
+
+    @include bp($foundation-small, $mobile-landscape) {
+        margin-bottom: .5em;
+    }
+}
