Updated initial map styles

--- a/src/public/sass/helpers/_variables.scss
+++ b/src/public/sass/helpers/_variables.scss
@@ -9,6 +9,9 @@ $masthead-border: 1px;
 $masthead-mobile: 70px;
 $icon: 44px;
 $icon-play: 66px;
+$row-padding-horizontal: 5%;
+$row-padding-vertical: 10%;
+$padding-card: 30px;
 
 // breakpoints
 $mobile-portrait: 320px;
