--- a/src/public/sass/styles.scss
+++ b/src/public/sass/styles.scss
@@ -32,6 +32,7 @@
 @import "modules/hooks";
 @import "modules/icons";
 @import "modules/incentives";
+@import "modules/locator";
 @import "modules/map";
 @import "modules/polaroids";
 @import "modules/products-section";
