--- a/src/public/sass/modules/_map.scss
+++ b/src/public/sass/modules/_map.scss
@@ -1,4 +1,5 @@
-#map {
+#map,
+#search-map {
     height: 30vw;
     max-height: 1000px;
     min-height: 400px;
@@ -10,5 +11,26 @@
     label {
         display: inline;
         width: auto;
+    }
+}
+
+img[src*="gstatic.com/"],
+img[src*="googleapis.com/"] {
+    max-width: none !important;
+}
+
+.gm-style {
+    font-family: $font-family-default;
+    font-size: initial;
+}
+
+.gm-style {
+    font-family: $font-family-default;
+    font-size: initial;
+
+    .gm-style-iw {
+        font-size: initial;
+        // font-weight: normal;
+        overflow: hidden;
     }
 }
