--- a/src/public/sass/layout/_footer.scss
+++ b/src/public/sass/layout/_footer.scss
@@ -8,15 +8,13 @@
 }
 .five-star--bottom {
 
-    @include bp($foundation-small, $foundation-med) {
-        bottom: 40px;
+    @include bp($foundation-small, $tablet) {
+        bottom: 35px;
         left: 8%;
         position: absolute;
     }
     @include bp($foundation-med, $tablet) {
-        bottom: 80px;
-        left: 4%;
-        position: absolute;
+        bottom: 85px;
     }
     @include bp($tablet) {
         display: none;
@@ -33,8 +31,24 @@
     }
 }
 
+.footer-grey-border {
+    background: $color-secondary;
+    bottom: 155px;
+    display: block;
+    height: 1px;
+    left: 0;
+    position: absolute;
+    right: 0;
+
+    @include bp($foundation-med) {
+        bottom: 45px;
+    }
+    @include bp($tablet) {
+        display: none !important;
+    }
+}
+
 .footer-row {
-    font-size: .875em;
     margin: 0 auto;
     max-width: $page-max-width;
     padding: {
@@ -43,6 +57,13 @@
     }
     text-align: left;
 
+    a {
+        @extend %no-underline;
+    }
+
+    @include bp($mobile-landscape) {
+        font-size: .875em;
+    }
     @include bp($foundation-large) {
         padding: {
             left: 2%;
@@ -68,12 +89,12 @@
         width: 10em;
 
         @include bp($foundation-small, $tablet) {
-            bottom: 10px;
+            bottom: 11px;
             left: 8%;
             position: absolute;
         }
         @include bp($foundation-med, $tablet) {
-            left: 4%;
+            left: 8%;
         }
         @include bp($tablet) {
             float: left;
@@ -116,7 +137,11 @@
                 }
 
                 @include bp($foundation-small, $foundation-large) {
+                    line-height: 2.125;
                     width: 60%;
+                }
+                @include bp($foundation-med, $tablet) {
+                    width: 50%;
                 }
                 @include bp($foundation-large) {
                     margin-right: 3%;
@@ -151,7 +176,11 @@
                 }
 
                 @include bp($foundation-small, $foundation-large) {
+                    line-height: 2.125;
                     width: 40%;
+                }
+                @include bp($foundation-med, $tablet) {
+                    width: 50%;
                 }
                 @include bp($foundation-large) {
                     min-width: 30%;
@@ -162,7 +191,7 @@
             }
 
             @include bp($foundation-small, $foundation-large) {
-                line-height: 2.125;
+                line-height: 0;
             }
             @include bp($tablet, foundation-large) {
                 text-align: left;
@@ -173,10 +202,14 @@
         }
 
         a {
+            clear: left;
             display: block;
+            float: left;
 
             @include bp($foundation-large) {
+                clear: none;
                 display: inline;
+                float: none;
             }
         }
         nav {
@@ -188,7 +221,7 @@
         }
         @include bp($foundation-med, $tablet) {
             margin: 0 0 0 auto;
-            width: 70%;
+            width: 67%;
         }
         @include bp($tablet, $foundation-large) {
             width: 40%;
@@ -214,13 +247,13 @@
         }
 
         @include bp($foundation-small, $foundation-med) {
-            bottom: 75px;
+            bottom: 70px;
             left: 58%;
             position: absolute;
         }
         @include bp($foundation-med, $tablet) {
-            bottom: 10px;
-            left: 68%;
+            bottom: 8px;
+            left: 63%;
             position: absolute;
         }
         @include bp($tablet) {
@@ -229,7 +262,7 @@
     }
 
     @include bp($foundation-small, $foundation-med) {
-        padding-bottom: 170px;
+        padding-bottom: 180px;
     }
     @include bp($foundation-med, $tablet) {
         padding-bottom: 80px;
