last touches to footer; working on paid search header

--- a/src/public/sass/pages/_product-detail.scss
+++ b/src/public/sass/pages/_product-detail.scss
@@ -112,6 +112,7 @@
         color: $color-default-light;
         line-height: 1.5;
         list-style: none;
+        margin: 2em 0;
         padding-left: 1.75em;
 
         li {
