--- a/src/public/sass/layout/_paid-search-header.scss
+++ b/src/public/sass/layout/_paid-search-header.scss
@@ -1,52 +1,3 @@
-.paid-search-branding--desktop {
-    display: none;
-    height: $ps-masthead-height;
-    float: left;
-    padding: 1% 0;
-
-    .brand {
-        display: inline-block;
-        height: 100%;
-
-        img {
-            @extend %vc;
-            max-height: 200px;
-            max-width: 200px;
-            width: 100%;
-            width: 100%;
-        }
-    }
-
-    @include bp($tablet) {
-        display: block;
-    }
-}
-
-.paid-search-branding--mobile {
-    background: #fff;
-    border-bottom: $masthead-border solid $color-secondary;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 12px 0 10px;
-    text-align: center;
-    width: 100%;
-
-    .brand {
-        display: inline-block;
-
-        img {
-            max-height: 200px;
-            max-width: 200px;
-            width: 100%;
-            width: 100%;
-        }
-    }
-
-    @include bp($tablet) {
-        display: none;
-    }
-}
-
 .paid-search-masthead {
     @extend %cf;
     background: #fff;
@@ -112,21 +63,34 @@
 
                     .phone-number {
 
+                        .icon-phone {
+                            bottom: 1px;
+                            height: 20px;
+                            line-height: 0;
+                            margin-right: .25em;
+                            width: 20px;
+
+                            @include bp($foundation-small, $foundation-med) {
+                                bottom: 0;
+                                height: 25px;
+                                margin-right: 0;
+                                width: 25px;
+                            }
+                            @include bp($my-very-large) {
+                                height: 22px;
+                                width: 22px;
+                            }
+                        }
                         .number {
                             display: none;
 
-                            @include bp($tablet) {
+                            @include bp($foundation-med) {
                                 display: inline;
                             }
                         }
 
-                        .phone-icon {
-                            vertical-align: middle;
-                        }
-
                         @include bp($foundation-small, $tablet) {
                             display: block;
-                            line-height: 0;
                         }
                     }
 
@@ -157,12 +121,41 @@
 
             img {
                 @extend %vc;
+                max-width: 100px;
+
+                @include bp($my-very-large) {
+                    max-width: 110px;
+                }
             }
 
             @include bp($tablet) {
                 display: block;
                 padding-right: 0;
             }
+        }
+    }
+
+    .paid-search-branding--desktop {
+        display: none;
+        height: $ps-masthead-height;
+        float: left;
+        padding: 1% 0;
+
+        .brand {
+            display: inline-block;
+            height: 100%;
+
+            img {
+                @extend %vc;
+                max-height: 200px;
+                max-width: 200px;
+                width: 100%;
+                width: 100%;
+            }
+        }
+
+        @include bp($tablet) {
+            display: block;
         }
     }
 
@@ -174,4 +167,33 @@
 .paid-search-masthead-wrapper {
     width: 100%;
     z-index: 100;
+
+    .branding{
+        background: #fff;
+        border-bottom: $masthead-border solid $color-secondary;
+        margin-left: auto;
+        margin-right: auto;
+        padding: 12px 0 10px;
+        text-align: center;
+        width: 100%;
+
+        .brand {
+            display: inline-block;
+
+            img {
+                max-height: 200px;
+                max-width: 200px;
+                width: 100%;
+                width: 100%;
+            }
+        }
+
+        @include bp($tablet) {
+            border: 0;
+            display: none;
+            height: 0;
+            margin: 0;
+            padding: 0;
+        }
+    }
 }
