Adding locator map markup, styles, and scripts from whyskylights.com

--- a/src/public/sass/base/_elements.scss
+++ b/src/public/sass/base/_elements.scss
@@ -197,6 +197,14 @@ nav {
 }
 
 /*-----------------------
+  @MENU
+------------------------*/
+menu {
+    margin: 0;
+    padding: 0;
+}
+
+/*-----------------------
   @BLOCKQUOTE
 ------------------------*/
 blockquote {
