--- a/src/public/sass/helpers/_variables.scss
+++ b/src/public/sass/helpers/_variables.scss
@@ -49,6 +49,25 @@ $color-social-icons: #5f6c71;
 $color-text-light: #f0f0f0;
 $overlay: $color-footer-bg;
 
+// new colors
+// whites
+$color-page: #fff;
+$color-reversed: #fff;
+$color-whitesmoke: #f7f7f7;
+$color-whitesmoke-dark: #efeeee;
+$color-alabaster: #f5f5ef;
+$color-zircon: #f3f4f4;
+
+// greys
+$color-gainsboro: #dfdfdf; // borders
+$color-silver: #a7a7a7;
+$color-trout: #595e5f;
+$color-montana: #363a3c;
+$color-cod-grey: #2b2f30;
+$color-cod-grey-dark: #272b2c;
+
+
+
 // typography
 $font-family-default: 'Helvetica', sans-serif;
 $font-family-display: 'Montserrat', sans-serif;
