--- a/src/public/sass/styles.scss
+++ b/src/public/sass/styles.scss
@@ -21,6 +21,7 @@
 
 @import "modules/accessories";
 @import "modules/arrows";
+@import "modules/backgrounds";
 @import "modules/breadcrumbs";
 @import "modules/buttons";
 @import "modules/cards";
@@ -38,6 +39,7 @@
 @import "modules/products-section";
 @import "modules/slick";
 @import "modules/statements";
+@import "modules/tabs-simple";
 @import "modules/testimonials";
 @import "modules/welcome";
 
