--- a/src/public/sass/modules/_forms.scss
+++ b/src/public/sass/modules/_forms.scss
@@ -34,6 +34,87 @@
     margin-left: 1.5em;
 }
 
+
+/*-----------------------
+  @FANCY SEARCH
+------------------------*/
+.fancy-search {
+    background: #fff;
+    border: 5px solid #505253;
+    border-radius: 5px;
+    margin: auto;
+    max-width: 500px;
+    overflow: hidden;
+    padding: 3px 15px;
+
+    @include bp($tablet) {
+        border: 10px solid #505253;
+        border-radius: 10px;
+    }
+    input[type="search"] {
+        @extend %bold;
+        @extend %font-display;
+        @extend %upper;
+        border: none;
+        float: left;
+        font-size: 13px;
+        height: 51px;
+        padding: 4px 0 0;
+        width: 85%;
+
+        @include bp($tablet) {
+            font-size: 14px;
+            height: 56px;
+        }
+        &:focus {
+            outline: none;
+        }
+    }
+    .btn[type="submit"] {
+        @extend %centered;
+        height: 55px;
+        padding: 0;
+        position: absolute;
+        right: 3px;
+        top: 3px;
+        width: 55px;
+
+        @include bp($tablet) {
+            height: 60px;
+            width: 60px;
+        }
+    }
+    .icon-search--reversed {
+        height: 20px;
+        margin-top: 8px;
+        width: 20px;
+    }
+
+    // footer
+    .card & {
+        border-radius: 5px;
+        border-width: 5px;
+        max-width: 250px;
+
+        input {
+            height: 40px;
+        }
+        .btn[type="submit"] {
+            height: 44px;
+            width: 44px;
+        }
+        .icon-search--reversed {
+            height: 14px;
+            width: 14px;
+        }
+    }
+}
+
+/*-----------------------
+  @SELECTRIC
+
+  http://lcdsantos.github.io/jQuery-Selectric/index.html
+------------------------*/
 .selectricWrapper {
     width: 100%;
 
