Installer locator now toggles between map and list view. Need to check other carousels for functionality!

--- a/src/public/sass/styles.scss
+++ b/src/public/sass/styles.scss
@@ -25,6 +25,7 @@
 @import "modules/breadcrumbs";
 @import "modules/buttons";
 @import "modules/cards";
+@import "modules/carousels";
 @import "modules/contact-modal";
 @import "modules/discover-more";
 @import "modules/forms";
